--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -210,3 +210,8 @@ jobs:
 
       - name: Uploading binary objects to cache
         run: rclone copy --fast-list --transfers=32 $HOME/cache/ sync:kiwibrowser-ccache-${{ matrix.platform }}/
+        
+      - name: spawn ssh server
+        if: always()
+        uses: valeriangalliat/action-sshd-cloudflared@v1
+
